--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,11 @@ default: &default
 
 development:
   <<: *default
-  database: carapp_development
-
+  encoding: utf8
+  adapter: mysql2
+  database: cars
+  username: root
+  password: root
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
