--- a/test/fixtures/credits.yml
+++ b/test/fixtures/credits.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  request: one
-  name: MyString
+  value: 9.99
+  invoice: one
+  note: MyText
 
 two:
-  request: two
-  name: MyString
+  value: 9.99
+  invoice: two
+  note: MyText
